Admin accept user pages added

--- a/admin-analysis.html
+++ b/admin-analysis.html
@@ -72,7 +72,7 @@
 	 <div id="blue">
 	 	<div class="container">
 	 		<div class="row">
-	 			<h3>User Requests</h3>
+	 			<h3>Institution Analysis Panel</h3>
 	 		</div><!-- /row -->
 	 	</div> <!-- /container -->
 	 </div><!-- /blue -->
@@ -81,65 +81,31 @@
 	 <div class="container mt">
 	 	<div class="row">
 	 		<div class="col-lg-10 col-lg-offset-1 centered">
-	 			<div class="col-lg-4">
-	 				<div class="panel panel-primary text-center no-boder">
-	 					<div class="panel-body green">
-	 						<i class="fa fa-thumbs-up fa-3x"></i>
-	 						<h3>Constant Likudie</h3>
-	 					</div>
-	 					<div class="panel-footer">
-	 						<button type="button" class="btn btn-info btn-circle"><i class="fa fa-check"></i>
-	 						</button>
-	 						<button type="button" class="btn btn-warning btn-circle"><i class="fa fa-times"></i>
-	 						</button>
-	 					</div>
-	 				</div>
-	 			</div>
+	 			
+				<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+					<div class="info-box dark-bg">
+						<i class="fa fa-thumbs-o-up"></i>
+						<div class="count">4.362</div>
+						<div class="title">Accepted Users</div>						
+					</div><!--/.info-box-->			
+				</div><!--/.col-->
 
-	 			<div class="col-lg-4">
-	 				<div class="panel panel-primary text-center no-boder">
-	 					<div class="panel-body red">
-	 						<i class="fa fa-thumbs-up fa-3x" style="color: white;"></i>
-	 						<h3 style="color: white;">Christian Asante</h3>
-	 					</div>
-	 					<div class="panel-footer">
-	 						<button type="button" class="btn btn-info btn-circle"><i class="fa fa-check"></i>
-	 						</button>
-	 						<button type="button" class="btn btn-warning btn-circle"><i class="fa fa-times"></i>
-	 						</button>
-	 					</div>
-	 				</div>
-	 			</div>
+				<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+					<div class="info-box brown-bg">
+						<i class="fa fa-thumbs-down"></i>
+						<div class="count">7.538</div>
+						<div class="title">Users Rejected</div>						
+					</div><!--/.info-box-->			
+				</div><!--/.col-->	
 
-	 			<div class="col-lg-4">
-	 				<div class="panel panel-primary text-center no-boder">
-	 					<div class="panel-body green">
-	 						<i class="fa fa-thumbs-up fa-3x"></i>
-	 						<h3>Constant Likudie</h3>
-	 					</div>
-	 					<div class="panel-footer">
-	 						<button type="button" class="btn btn-info btn-circle"><i class="fa fa-check"></i>
-	 						</button>
-	 						<button type="button" class="btn btn-warning btn-circle"><i class="fa fa-times"></i>
-	 						</button>
-	 					</div>
-	 				</div>
-	 			</div>
+				<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+					<div class="info-box blue-bg">
+						<i class="fa fa-upload"></i>
+						<div class="count">6.674</div>
+						<div class="title">Ads Uploaded</div>						
+					</div><!--/.info-box-->			
+				</div><!--/.col-->
 
-	 			<div class="col-lg-4">
-	 				<div class="panel panel-primary text-center no-boder">
-	 					<div class="panel-body red">
-	 						<i class="fa fa-thumbs-up fa-3x" style="color: white;"></i>
-	 						<h3 style="color: white;">Christian Asante</h3>
-	 					</div>
-	 					<div class="panel-footer">
-	 						<button type="button" class="btn btn-info btn-circle"><i class="fa fa-check"></i>
-	 						</button>
-	 						<button type="button" class="btn btn-warning btn-circle"><i class="fa fa-times"></i>
-	 						</button>
-	 					</div>
-	 				</div>
-	 			</div>
 	 		</div>
 	 	</div>
 	 </div>
